--- a/src/main/resources/public/culture_palace.html
+++ b/src/main/resources/public/culture_palace.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Імпресаріо</title>
+    <title>Культурні палаци</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
