--- a/src/main/resources/public/impresario_and_genre.html
+++ b/src/main/resources/public/impresario_and_genre.html
@@ -22,7 +22,7 @@
                 <th>Імпресаріо</th>
                 <th>Жанр</th>
                 <th width="200px">
-                    <button type="create" class="btn-success" data-toggle="modal" data-target="#addModal">Додати</button>
+
                 </th>
             </tr>
             </thead>
@@ -30,12 +30,12 @@
             <tbody>
 
             <tr ng-repeat = "item in impresarios">
-                <td>{{item.impresario.id}}</td>
-                <td>{{item.impresario.name}}</td>
-                <td>{{item.genre.toString()}}</td>
+                <td>{{item.id}}</td>
+                <td>{{item.name}}</td>
+                <td>{{item.genreSet.toString()}}</td>
                 <td>
-                    <button id="update" ng-click="impresarioGenreCtrl.startUpdateGenres(item.impresario.id, item.impresario.name, item.genre.toString())" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
-                    <button id="delete" ng-click="impresarioGenreCtrl.deleteGenre(item.impresario.id, item.genre.toString())" class="btn-danger">Видалити</button>
+                    <button type="create" class="btn-success" data-toggle="modal" data-target="#addModal" ng-click="impresarioGenreCtrl.startAddGenre(item.id, item.name, item.genreSet)">Додати</button>
+                    <button id="delete" ng-click="impresarioGenreCtrl.startDeleteGenre(item.id, item.name, item.genreSet)" class="btn-danger" data-toggle="modal" data-target="#deleteModal">Видалити</button>
                 </td>
             </tr>
             </tbody>
@@ -50,10 +50,9 @@
                     <h4 class="modal-title">Додавання</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Імпресаріо:  </label>
-                    <select id="selectedImpresario">
-                    </select><br>
-                    <label>Жанри:</label>
+                    <label>Імпресаріо: </label>
+                    <span id="impresarioName"></span><br>
+                    <label>Жанри для додавання:</label><br>
                     <select multiple ng-model="selectedGenres" id="selectGenres" name="selectGenres" title="Жанри">
                         <option>Комедія</option>
                         <option>Драма</option>
@@ -70,7 +69,7 @@
                     <button id="addGenreButton" ng-click="impresarioGenreCtrl.addGenre()">Додати</button>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="impresarioGenreCtrl.onClose()">Закрити</button>
                 </div>
             </div>
 
@@ -78,7 +77,7 @@
     </div>
 
     <!-- Редагування артиста -->
-    <div id="editModal" class="modal fade" role="dialog">
+    <div id="deleteModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -86,23 +85,14 @@
                     <h4 class="modal-title">Редагування</h4>
                 </div>
                 <div class="modal-body">
-                    <label>Імпресаріо:  </label>
-                    <span id="updLabelImpresario"></span> <br>
-                    <select ng-model="selectedGenre" id="selectGenre" name="selectGenre" title="Жанри">
-                        <option>Комедія</option>
-                        <option>Драма</option>
-                        <option>Мелодрама</option>
-                        <option>Мюзикл</option>
-                        <option>Пародія</option>
-                        <option>Фантастика</option>
-                        <option>Боєвик</option>
-                        <option>Фентезі</option>
-                        <option>Тріллер</option>
-                        <option>Детектив</option>
+                    <label>Імпресаріо: </label>
+                    <span id="delImpresarioName"></span> <br>
+                    <select ng-model="delSelectedGenre" id="delSelectGenre" name="selectGenre" title="Жанри">
                     </select>
-                    <button id="editGenresButton" ng-click="impresarioGenreCtrl.updateGenre()">Змінити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button id="deleteGenresButton" type="button" class="btn btn-default" ng-click="impresarioGenreCtrl.deleteGenre()">Видалити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
