--- a/src/main/resources/public/artist_genre.html
+++ b/src/main/resources/public/artist_genre.html
@@ -69,7 +69,7 @@
                     <button id="addGenreButton" ng-click="artistGenreCtrl.addGenre()">Додати</button>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="artistGenreCtrl.onClose()">Закрити</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="">Закрити</button>
                 </div>
             </div>
 
@@ -92,7 +92,7 @@
                 </div>
                 <div class="modal-footer">
                     <button id="deleteGenresButton" type="button" class="btn btn-default" ng-click="artistGenreCtrl.deleteGenre()">Видалити</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="artistGenreCtrl.onClose()">Закрити</button>
                 </div>
             </div>
 
