--- a/src/main/resources/public/impresario_and_genre.html
+++ b/src/main/resources/public/impresario_and_genre.html
@@ -69,31 +69,30 @@
                     <button id="addGenreButton" ng-click="impresarioGenreCtrl.addGenre()">Додати</button>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="impresarioGenreCtrl.onClose()">Закрити</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="">Закрити</button>
                 </div>
             </div>
 
         </div>
     </div>
 
-    <!-- Редагування артиста -->
     <div id="deleteModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Редагування</h4>
+                    <h4 class="modal-title">Видалення</h4>
                 </div>
                 <div class="modal-body">
                     <label>Імпресаріо: </label>
                     <span id="delImpresarioName"></span> <br>
-                    <select ng-model="delSelectedGenre" id="delSelectGenre" name="selectGenre" title="Жанри">
+                    <select multiple="multiple" ng-model="delSelectedGenre" id="delSelectGenre" name="selectGenre" title="Жанри">
                     </select>
 
                 </div>
                 <div class="modal-footer">
                     <button id="deleteGenresButton" type="button" class="btn btn-default" ng-click="impresarioGenreCtrl.deleteGenre()">Видалити</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="impresarioGenreCtrl.onClose()">Закрити</button>
                 </div>
             </div>
 
