--- a/src/main/resources/public/artist_and_impresario.html
+++ b/src/main/resources/public/artist_and_impresario.html
@@ -28,9 +28,9 @@
             <tbody>
 
             <tr ng-repeat = "item in artists">
-                <td>{{item.artist.id}}</td>
-                <td>{{item.artist.name}}</td>
-                <td>{{item.impresario.name}}</td>
+                <td>{{item.id}}</td>
+                <td>{{item.name}}</td>
+                <td>{{item.impresarios.toString()}}</td>
                 <td>
                     <button id="update" ng-click="artistImpresarioCtrl.startUpdateArtistImpresarios(item.artist.id, item.artist.name, item.impresario.id)" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
                     <button id="delete" ng-click="artistImpresarioCtrl.deleteArtistImpresario(item.artist.id, item.impresario.id)" class="btn-danger">Видалити</button>
