--- a/src/main/resources/public/artist_and_impresario.html
+++ b/src/main/resources/public/artist_and_impresario.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Імпресаріо артистів</title>
+    <title>Артист та імпресаріо</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -21,7 +21,9 @@
                 <th>ІД</th>
                 <th>Артист</th>
                 <th>Імпресаріо</th>
-                <th width="230px"><button type="create" class="btn-success" data-toggle="modal" data-target="#addModal">Додати</button></th>
+                <th width="200px">
+
+                </th>
             </tr>
             </thead>
 
@@ -32,8 +34,8 @@
                 <td>{{item.name}}</td>
                 <td>{{item.impresarios.toString()}}</td>
                 <td>
-                    <button id="update" ng-click="artistImpresarioCtrl.startUpdateArtistImpresarios(item.artist.id, item.artist.name, item.impresario.id)" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
-                    <button id="delete" ng-click="artistImpresarioCtrl.deleteArtistImpresario(item.artist.id, item.impresario.id)" class="btn-danger">Видалити</button>
+                    <button type="create" class="btn-success" data-toggle="modal" data-target="#addModal" ng-click="artistImpresarioCtrl.startAddImpresario(item.id, item.name, item.impresarios)">Додати</button>
+                    <button id="delete" ng-click="artistImpresarioCtrl.startDeleteImpresario(item.id, item.name, item.impresarios)" class="btn-danger" data-toggle="modal" data-target="#deleteModal">Видалити</button>
                 </td>
             </tr>
             </tbody>
@@ -49,42 +51,39 @@
                 </div>
                 <div class="modal-body">
                     <label>Артист: </label>
-                    <select id="selectArtist">
+                    <span id="artistName"></span><br>
+                    <label>Імпресаріо:</label><br>
+                    <select multiple="multiple" ng-model="selectedImpresarios" id="selectImpresarios" name="selectImpresarios" title="Жанри">
 
-                    </select><br>
-                    <label>Імпресаріо: </label> <br>
-                    <select multiple ng-model="selectedImpresarios" id="selectImpresarios" name="selectImpresarios" title="Імпресаріо">
-
-                    </select> <br>
+                    </select>
+                    <br>
                     <button id="addImpresarioButton" ng-click="artistImpresarioCtrl.addImpresario()">Додати</button>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="">Закрити</button>
                 </div>
             </div>
 
         </div>
     </div>
 
-    <!-- Редагування артиста -->
-    <div id="editModal" class="modal fade" role="dialog">
+    <div id="deleteModal" class="modal fade" role="dialog">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Редагування</h4>
+                    <h4 class="modal-title">Видалення</h4>
                 </div>
                 <div class="modal-body">
                     <label>Артист: </label>
-                    <span id="labelArtist"></span> <br>
-                    <label>Імпресаріо: </label> <br>
-                    <select id="updSelectImpresarios" name="updSelectImpresarios" title="Імпресаріо">
-
+                    <span id="delArtistName"></span> <br>
+                    <select multiple="multiple" ng-model="delSelectedImpresario" id="delSelectImpresario" name="selectImpresario" title="Жанри">
                     </select>
+
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="artistImpresarioCtrl.updateArtistImpresario()">Змінити</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
+                    <button id="deleteImpresariosButton" type="button" class="btn btn-default" ng-click="artistImpresarioCtrl.deleteImpresario()">Видалити</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="artistImpresarioCtrl.onClose()">Закрити</button>
                 </div>
             </div>
 
