--- a/src/main/resources/public/cinema.html
+++ b/src/main/resources/public/cinema.html
@@ -31,8 +31,8 @@
                 <td>{{item.address}}</td>
                 <td>{{item.screenSize}}</td>
                 <td>
-                    <button id="update" ng-click="cinemaCtrl.startUpdateCinema(item.id, item.name, item.address, item.screenSize)" class="btn-warning" data-toggle="modal" data-target="#editModal">Edit</button>
-                    <button id="delete" ng-click="cinemaCtrl.deleteCinema(item.id)" class="btn-danger">Del</button>
+                    <button id="update" ng-click="cinemaCtrl.startUpdateCinema(item.id, item.name, item.address, item.screenSize)" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
+                    <button id="delete" ng-click="cinemaCtrl.deleteCinema(item.id)" class="btn-danger">Видалити</button>
                 </td>
             </tr>
             </tbody>
@@ -53,7 +53,7 @@
                     <label>Адреса:</label>
                     <input type="text" id="CinemaAddress" name="CinemaAddress" /> <br>
                     <label>Розмір екрану:</label>
-                    <input type="text" id="CinemaScreenSize" name="CinemaScreenSize" /> <br>
+                    <input type="number" min="1" id="CinemaScreenSize" name="CinemaScreenSize" /> <br>
                     <button id="createCinemaButton" ng-click="cinemaCtrl.createCinema()">Створити</button>
                 </div>
                 <div class="modal-footer">
@@ -78,7 +78,7 @@
                     <label>Адреса:</label>
                     <input type="text" id="updateCinemaAddress" name="updateCinemaAddress" /> <br>
                     <label>Розмір екрану:</label>
-                    <input type="text" id="updateCinemaScreenSize" name="updateCinemaScreenSize" /> <br>
+                    <input type="number" min="1" id="updateCinemaScreenSize" name="updateCinemaScreenSize" /> <br>
                     <button id="editCinemaButton" ng-click="cinemaCtrl.updateCinema()">Змінити</button>
                 </div>
                 <div class="modal-footer">
