--- a/src/main/resources/public/culture_palace.html
+++ b/src/main/resources/public/culture_palace.html
@@ -55,7 +55,7 @@
                     <label>Адреса:</label>
                     <input type="text" id="CulturePalaceAddress" name="CulturePalaceAddress" /> <br>
                     <label>Місткість:</label>
-                    <input type="text" id="CulturePalaceCapacity" name="CulturePalaceCapacity" /> <br>
+                    <input type="number" min="10" id="CulturePalaceCapacity" name="CulturePalaceCapacity" /> <br>
                     <button id="createCulturePalaceButton" ng-click="culturePalaceCtrl.createCulturePalace()">Створити</button>
                 </div>
                 <div class="modal-footer">
@@ -80,7 +80,7 @@
                     <label>Адреса:</label>
                     <input type="text" id="updateCulturePalaceAddress" name="updateCulturePalaceAddress" /> <br>
                     <label>Місткість:</label>
-                    <input type="text" id="updateCulturePalaceCapacity" name="updateCulturePalaceCapacity" /> <br>
+                    <input type="number" min="10" id="updateCulturePalaceCapacity" name="updateCulturePalaceCapacity" /> <br>
                     <button id="editCulturePalaceButton" ng-click="culturePalaceCtrl.updateCulturePalace()">Змінити</button>
                 </div>
                 <div class="modal-footer">
