--- a/src/main/resources/public/organizer.html
+++ b/src/main/resources/public/organizer.html
@@ -29,8 +29,8 @@
                 <td>{{item.id}}</td>
                 <td>{{item.name}}</td>
                 <td>
-                    <button id="update" ng-click="organizerCtrl.startUpdateOrganizer(item.id, item.name)" class="btn-warning" data-toggle="modal" data-target="#editModal">Edit</button>
-                    <button id="delete" ng-click="organizerCtrl.deleteOrganizer(item.id)" class="btn-danger">Del</button>
+                    <button id="update" ng-click="organizerCtrl.startUpdateOrganizer(item.id, item.name)" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
+                    <button id="delete" ng-click="organizerCtrl.deleteOrganizer(item.id)" class="btn-danger">Видалити</button>
                 </td>
             </tr>
             </tbody>
