--- a/src/main/resources/public/theatre.html
+++ b/src/main/resources/public/theatre.html
@@ -33,8 +33,8 @@
                 <td>{{item.address}}</td>
                 <td>{{item.capacity}}</td>
                 <td>
-                    <button id="update" ng-click="theatreCtrl.startUpdateTheatre(item.id, item.name, item.address, item.capacity)" class="btn-warning" data-toggle="modal" data-target="#editModal">Edit</button>
-                    <button id="delete" ng-click="theatreCtrl.deleteTheatre(item.id)" class="btn-danger">Del</button>
+                    <button id="update" ng-click="theatreCtrl.startUpdateTheatre(item.id, item.name, item.address, item.capacity)" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
+                    <button id="delete" ng-click="theatreCtrl.deleteTheatre(item.id)" class="btn-danger">Видалити</button>
                 </td>
             </tr>
             </tbody>
