Finally, all the tables work properly.

--- a/src/main/resources/public/artist.html
+++ b/src/main/resources/public/artist.html
@@ -11,7 +11,7 @@
 
 </head>
 <body ng-app = "demo">
-
+Артисти
 <div class="container" style="margin-top: 30px" ng-controller = "ArtistCtrl as artistCtrl">
     <div class="datagrid">
         <table>
