--- a/src/main/resources/public/artist_and_impresario.html
+++ b/src/main/resources/public/artist_and_impresario.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Артист та імпресаріо</title>
+    <title>Артисти та імпресаріо</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -12,8 +12,8 @@
 
 </head>
 <body ng-app = "demo">
-
-<div class="container" style="margin-top: 30px" ng-controller = "ArtistImpresarioCtrl as artistImpresarioCtrl">
+Артисти та імпресаріо
+<div class="container-fluid" ng-controller = "ArtistImpresarioCtrl as artistImpresarioCtrl">
     <div class="datagrid">
         <table>
             <thead>
