--- a/src/main/resources/public/concert_in_hall.html
+++ b/src/main/resources/public/concert_in_hall.html
@@ -11,8 +11,8 @@
 
 </head>
 <body ng-app = "demo">
-
-<div class="container" style="margin-top: 30px" ng-controller = "ConcertInHallCtrl as concertInHallCtrl">
+Концерти
+<div class="container-fluid" ng-controller = "ConcertInHallCtrl as concertInHallCtrl">
     <div class="datagrid">
         <div class="panel-heading">Концерти</div>
 
