--- a/src/main/resources/public/navigation.html
+++ b/src/main/resources/public/navigation.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
 
 </head>
-<body>
-
+<body style="background-color: #288bcc">
     <ul id="ul1">
         <li><a href ="title.html">Титульна сторінка</a></li>
         <li><a href ="artist.html">Артист</a></li>
