--- a/src/main/resources/public/artist.html
+++ b/src/main/resources/public/artist.html
@@ -12,7 +12,7 @@
 </head>
 <body ng-app = "demo">
 Артисти
-<div class="container" style="margin-top: 30px" ng-controller = "ArtistCtrl as artistCtrl">
+<div class="container-fluid" ng-controller = "ArtistCtrl as artistCtrl">
     <div class="datagrid">
         <table>
             <thead>
@@ -48,9 +48,10 @@
                 <div class="modal-body">
                     <label>Ім'я:</label>
                     <input type="text" id="artistName" name="artistName" /> <br>
-                    <button id="createArtistButton" ng-click="artistCtrl.createArtist()">Створити</button>
+
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-default" id="createArtistButton" ng-click="artistCtrl.createArtist()">Створити</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">Закрити</button>
                 </div>
             </div>
