--- a/src/main/resources/public/artist_genre.html
+++ b/src/main/resources/public/artist_genre.html
@@ -12,8 +12,8 @@
 
 </head>
 <body ng-app = "demo">
-
-<div class="container" style="margin-top: 30px" ng-controller = "ArtistGenreCtrl as artistGenreCtrl">
+Жанри артистів
+<div class="container-fluid" ng-controller = "ArtistGenreCtrl as artistGenreCtrl">
     <div class="datagrid">
         <table>
             <thead>
