--- a/src/main/resources/public/cinema.html
+++ b/src/main/resources/public/cinema.html
@@ -9,8 +9,8 @@
 
 </head>
 <body ng-app = "demo">
-
-<div class="container" style="margin-top: 30px" ng-controller = "CinemaCtrl as cinemaCtrl">
+Кінотеатри
+<div class="container-fluid" ng-controller = "CinemaCtrl as cinemaCtrl">
     <div class="datagrid">
         <table>
             <thead>
