--- a/src/main/resources/public/cinema_movies.html
+++ b/src/main/resources/public/cinema_movies.html
@@ -11,7 +11,7 @@
 
 </head>
 <body ng-app = "demo">
-
+Фільми
 <div class="container" style="margin-top: 30px" ng-controller = "CinemaMovieCtrl as cinemaMovieCtrl">
     <div class="datagrid">
         <table>
