--- a/src/main/resources/public/navigation.html
+++ b/src/main/resources/public/navigation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Меню</title>
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/styless.css" type="text/css">
 
 </head>
 <body>
