--- a/src/main/resources/public/theatre_performance.html
+++ b/src/main/resources/public/theatre_performance.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Виступи</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
-
+    <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body ng-app = "demo">
 
-<div class="container" style="margin-top: 30px" ng-controller = "TheatrePerformanceCtrl as theatrePerformanceCtrl">
-    <div class="datagrid">
-        <div class="panel-heading">Виступи</div>
+<div class="container" ng-controller = "TheatrePerformanceCtrl as theatrePerformanceCtrl">
+    <div class="row">
+        <div class="col-md12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Виступи</div>
+                <div class="panel-body">
 
-        <table>
+                    <table class="table table-striped">
             <thead>
             <tr>
                 <th>&#128273ІД</th>
@@ -24,8 +24,8 @@
                 <th>Театр</th>
                 <th>Організатор</th>
                 <th>Дата</th>
-                <th width="30px"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal"
-                                         ng-click="theatrePerformanceCtrl.startCreateTheatrePerformance()">Створити</button></th>
+                <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal"
+                                         ng-click="theatrePerformanceCtrl.startCreateTheatrePerformance()">✚</button></th>
             </tr>
             </thead>
 
@@ -38,12 +38,16 @@
                 <td>{{item.organizer.name}}</td>
                 <td>{{item.date}}</td>
                 <td>
-                    <button id="update" ng-click="theatrePerformanceCtrl.startUpdateTheatrePerformance(item.id, item.name, item.theatre.id, item.organizer.id, item.date)" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
-                    <button id="delete" ng-click="theatrePerformanceCtrl.deleteTheatrePerformance(item.id)" class="btn-danger">Видалити</button>
+                    <button id="update" ng-click="theatrePerformanceCtrl.startUpdateTheatrePerformance(item.id, item.name, item.theatre.id, item.organizer.id, item.date)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
+                    <button id="delete" ng-click="theatrePerformanceCtrl.deleteTheatrePerformance(item.id)" class="btn-danger">❌</button>
                 </td>
             </tr>
             </tbody>
         </table>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
     <!-- Додавання артиста -->
