--- a/src/main/resources/public/artist.html
+++ b/src/main/resources/public/artist.html
@@ -4,36 +4,42 @@
     <meta charset="UTF-8">
     <title>Артисти</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 
 
 </head>
 <body ng-app = "demo">
-Артисти
-<div class="container-fluid" ng-controller = "ArtistCtrl as artistCtrl">
-    <div class="datagrid">
-        <table>
-            <thead>
-                <tr>
-                    <th>&#128273ІД</th>
-                    <th>Ім'я</th>
-                    <th width="30px"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal" style="align-self:center">Створити</button></th>
-                </tr>
-            </thead>
+<div class="container" ng-controller = "ArtistCtrl as artistCtrl">
+    <div class="row">
+        <div class="col-md12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Артисти</div>
+                <div class="panel-body">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr style="left: 0">
+                                <th>&#128273ІД</th>
+                                <th>Ім'я</th>
+                                <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal">✚</button></th>
+                            </tr>
+                        </thead>
 
-            <tbody>
+                        <tbody>
 
-            <tr ng-repeat = "item in artists">
-                <td>{{item.id}}</td>
-                <td>{{item.name}}</td>
-                <td>
-                    <button id="update" ng-click="artistCtrl.startUpdateArtist(item.id, item.name)" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
-                    <button id="delete" ng-click="artistCtrl.deleteArtist(item.id)" class="btn-danger">Видалити</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                        <tr ng-repeat = "item in artists">
+                            <td>{{item.id}}</td>
+                            <td>{{item.name}}</td>
+                            <td>
+                                <button id="update" ng-click="artistCtrl.startUpdateArtist(item.id, item.name)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
+                                <button id="delete" ng-click="artistCtrl.deleteArtist(item.id)" class="btn-danger">❌</button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Додавання артиста -->
@@ -47,7 +53,7 @@
                 <div class="modal-body">
                     <label>Ім'я:
                     <input type="text" id="artistName"/></label><br>
-                    <span style="color: #c00000; text-align: left;" id="wrongName"></span>
+                    <span style="color: #c00000; text-align: left; font-size: 50%" id="wrongName"></span>
 
                 </div>
                 <div class="modal-footer">
@@ -70,7 +76,7 @@
                 <div class="modal-body">
                     <label>Ім'я:
                     <input type="text" id="updateArtistName" name="updateArtistName" /></label><br>
-                    <span style="color: #c00000; text-align: left; font-size: 6px" id="editWrongName"></span>
+                    <span style="color: #c00000; text-align: left; font-size: 12px" id="editWrongName"></span>
 
                 </div>
                 <div class="modal-footer">
