--- a/src/main/resources/public/artist_queries_test.html
+++ b/src/main/resources/public/artist_queries_test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Артисти</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styless.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
