--- a/src/main/resources/public/cinema_movies.html
+++ b/src/main/resources/public/cinema_movies.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Фільми</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 
 
 
 </head>
 <body ng-app = "demo">
-Фільми
-<div class="container" style="margin-top: 30px" ng-controller = "CinemaMovieCtrl as cinemaMovieCtrl">
-    <div class="datagrid">
-        <table>
+<div class="container" ng-controller = "CinemaMovieCtrl as cinemaMovieCtrl">
+    <div class="row">
+        <div class="col-md12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Фільми</div>
+                <div class="panel-body">
+                    <table class="table table-striped">
             <thead>
                 <tr>
                     <th>&#128273ІД</th>
@@ -22,8 +24,8 @@
                     <th>Жанр</th>
                     <th>Кінотеатр</th>
                     <th>Дата</th>
-                    <th width="30px"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal"
-                    ng-click="cinemaMovieCtrl.startCreateCinemaMovie()">Створити</button></th>
+                    <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal"
+                    ng-click="cinemaMovieCtrl.startCreateCinemaMovie()">✚</button></th>
                 </tr>
             </thead>
 
@@ -36,12 +38,16 @@
                 <td>{{item.cinema.name}}</td>
                 <td>{{item.date}}</td>
                 <td>
-                    <button id="update" ng-click="cinemaMovieCtrl.startUpdateCinemaMovie(item.id, item.name, item.genre, item.cinemaId, item.date)" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
-                    <button id="delete" ng-click="cinemaMovieCtrl.deleteCinemaMovie(item.id)" class="btn-danger">Видалити</button>
+                    <button id="update" ng-click="cinemaMovieCtrl.startUpdateCinemaMovie(item.id, item.name, item.genre, item.cinemaId, item.date)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
+                    <button id="delete" ng-click="cinemaMovieCtrl.deleteCinemaMovie(item.id)" class="btn-danger">❌</button>
                 </td>
             </tr>
             </tbody>
         </table>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
     <!-- Додавання артиста -->
