--- a/src/main/resources/public/contest_in_palace.html
+++ b/src/main/resources/public/contest_in_palace.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Конкурси</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="css/styles.css">
 
 
 </head>
 <body ng-app = "demo">
-<div class="container" style="margin-top: 30px" ng-controller = "ContestInPalaceCtrl as contestInPalaceCtrl">
-    <div class="datagrid">
-        <div class="panel-heading">Конкурси</div>
 
-        <table>
+<div class="container" ng-controller = "ContestInPalaceCtrl as contestInPalaceCtrl">
+    <div class="row">
+        <div class="col-md12">
+            <div class="panel panel-default">
+                <div class="panel-heading">Конкурси</div>
+                <div class="panel-body">
+
+                    <table class="table table-striped">
             <thead>
             <tr>
                 <th>&#128273ІД</th>
@@ -23,8 +25,8 @@
                 <th>Концертна площадка</th>
                 <th>Організатор</th>
                 <th>Дата</th>
-                <th width="30px"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal"
-                                         ng-click="contestInPalaceCtrl.startCreateContestInPalace()">Створити</button></th>
+                <th class="headerWidth"><button type="button" class="btn-success" data-toggle="modal" data-target="#addModal"
+                                         ng-click="contestInPalaceCtrl.startCreateContestInPalace()">✚</button></th>
             </tr>
             </thead>
 
@@ -37,12 +39,16 @@
                 <td>{{item.organizer.name}}</td>
                 <td>{{item.date}}</td>
                 <td>
-                    <button id="update" ng-click="contestInPalaceCtrl.startUpdateContestInPalace(item.id, item.name, item.culturePalace.id, item.organizer.id, item.date)" class="btn-warning" data-toggle="modal" data-target="#editModal">Редагувати</button>
-                    <button id="delete" ng-click="contestInPalaceCtrl.deleteContestInPalace(item.id)" class="btn-danger">Видалити</button>
+                    <button id="update" ng-click="contestInPalaceCtrl.startUpdateContestInPalace(item.id, item.name, item.culturePalace.id, item.organizer.id, item.date)" class="btn-warning" data-toggle="modal" data-target="#editModal"><span style="font-size: 18px">✏</span></button>
+                    <button id="delete" ng-click="contestInPalaceCtrl.deleteContestInPalace(item.id)" class="btn-danger">❌</button>
                 </td>
             </tr>
             </tbody>
         </table>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
     <!-- Додавання артиста -->
