--- a/src/main/resources/public/cinema.html
+++ b/src/main/resources/public/cinema.html
@@ -12,7 +12,28 @@
 <div class="row">
     <div class="col-md12">
         <div class="panel panel-default">
-            <div class="panel-heading">Кінотеатри</div>
+            <div class="panel-heading">
+                <div class="dropdown">
+                    <button class="dropbtn">Кінотеатри</button>
+                    <div class="dropdown-content">
+                        <a href ="title.html">Титульна сторінка</a>
+                        <a href="artist.html">Артисти</a>
+                        <a href ="artist_genre.html">Жанри артиста</a>
+                        <a href ="artist_and_impresario.html">Імпресаріо артистів</a>
+                        <a href ="cinema_movies.html">Фільми</a>
+                        <a href ="concert_hall.html">Концертні площадки</a>
+                        <a href ="concert_in_hall.html">Концерти</a>
+                        <a href ="contest_in_palace.html">Конкурси</a>
+                        <a href ="contest_results.html">Результати конкурсів</a>
+                        <a href ="culture_palace.html">Палаци культури</a>
+                        <a href ="impresario.html">Імпресаріо</a>
+                        <a href ="impresario_and_genre.html">Жанри імпресаріо</a>
+                        <a href ="organizer.html">Організатори</a>
+                        <a href ="theatre.html">Театри</a>
+                        <a href ="theatre_performance.html">Виступи</a>
+                    </div>
+                </div>
+            </div>
             <div class="panel-body">
                 <table class="table table-striped">
             <thead>
